--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 .env
 venv/
+__pycache__/
 
+__pycache__/apisetup.cpython-312.pyc
+__pycache__/pandas.cpython-312.pyc
+__pycache__/source.cpython-312.pyc
